--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block navigation %}
-<nav class="navbar navbar-fixed-top navigacja" role="navigation" id="slide-nav">
+<nav class="navbar navbar-fixed-top navigacja navbar-landing" role="navigation" id="slide-nav">
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -11,7 +11,8 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="/"><img src="/static/img/logo.png" class="img-responsive"/></a>
+            <a class="navbar-brand page-scroll" href="/"><img src="/static/img/logo-landing.png"
+                                                              class="img-responsive"/></a>
         </div>
         <div id="slidemenu">
             <ul class="nav navbar-nav navbar-right">
@@ -33,95 +34,162 @@
 {% end %}
 
 {% block main %}
-<header>
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-10 text-center col-sm-offset-1">
-                <div class="intro-header">
-                    <h1>Komunikacja studentów z profesorami <span>staje się przyjemnością</span></h1>
-                    <button class="btn btn-group white logowanie" data-toggle="modal" data-target="#loginModal">Zaloguj
-                        się
-                    </button>
-                </div>
-                <!--<div class="intro-body">
-                    <div class="text-center caption">
-
+<div id="page-content" class="landing-page">
+    <header>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-10 text-center col-sm-offset-1">
+                    <div class="intro-header">
+                        <h1>Komunikacja studentów z profesorami <span>staje się przyjemnością</span></h1>
+                        <button class="btn btn-group white logowanie" data-toggle="modal" data-target="#loginModal">
+                            Zaloguj
+                            się
+                        </button>
                     </div>
-                    <div class="text-center caption-img">
+                    <!--<div class="intro-body">
+                        <div class="text-center caption">
 
-                    </div>
-                </div>-->
-                <div class="img-header">
-                    <img src="/static/img/apple_devices.png" class="img-responsive"/>
-                </div>
-            </div>
-        </div>
-    </div>
-</header>
-
-<section id="pomoc">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12 overview">
-                <div class="col-sm-8 text-center col-sm-offset-2 ">
-                    <h2>Pobierz wersje mobilną i ciesz się dodatkowymi funkcjonalnościami</h2>
-                </div>
-                <div class="col-xs-12 text-center download">
-                    <div class="col-xs-12 col-md-6 col-md-offset-3 text-right">
-                        <div class="col-xs-6">
-                            <a href="#"><img src="/static/img/google_play.png" class=""/></a>
                         </div>
-                        <div class="col-xs-6 text-left">
-                            <a href="#"><img src="/static/img/app_store.png" class=""/></a>
+                        <div class="text-center caption-img">
+
                         </div>
+                    </div>-->
+                    <div class="img-header">
+                        <img src="/static/img/apple_devices.png" class="img-responsive"/>
                     </div>
                 </div>
-                <div class="col-xs-12 text-center log-overview">
-                    <p>lub <a href="#" class="blue " data-toggle="modal" data-target="#loginModal">Zaloguj się</a> do
-                        wersji desktopowej</p>
+            </div>
+        </div>
+    </header>
+    <section id="pomoc">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 overview">
+                    <div class="col-sm-8 text-center col-sm-offset-2 ">
+                        <h2>Pobierz wersje mobilną i ciesz się dodatkowymi funkcjonalnościami</h2>
+                    </div>
+                    <div class="col-xs-12 text-center download">
+                        <div class="col-xs-12 col-md-6 col-md-offset-3 text-right">
+                            <div class="col-xs-6">
+                                <a href="#"><img src="/static/img/google_play.png" class=""/></a>
+                            </div>
+                            <div class="col-xs-6 text-left">
+                                <a href="#"><img src="/static/img/app_store.png" class=""/></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 text-center log-overview">
+                        <p>lub <a href="#" class="blue " data-toggle="modal" data-target="#loginModal">Zaloguj się</a>
+                            do
+                            wersji desktopowej</p>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
+    <section id="demo">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 text-center ">
+                    <h2>Dlaczego warto korzystać z <span class="blue">Kujon.mobi</span>?</h2>
+                </div>
+                <div class="col-sm-12 demo-col">
+                    <div class="col-sm-4">
+                        <h3><i class="fa fa-users"></i>Wymiana wiedzy</h3>
+                        <p>Duis viverra lacus at congue tempor. Nunc ac convallis enim, et commodo sem.</p>
+                    </div>
+                    <div class="col-sm-4">
+                        <h3><i class="fa fa-share-alt"></i>Komunikacja</h3>
+                        <p>Duis viverra lacus at congue tempor. Nunc ac convallis enim, et commodo sem.</p>
+                    </div>
+                    <div class="col-sm-4">
+                        <h3><i class="fa fa-briefcase"></i>Organizacja nauki</h3>
+                        <p>Duis viverra lacus at congue tempor. Nunc ac convallis enim, et commodo sem.</p>
+                    </div>
+                </div>
+                <div class="col-sm-12 demo-col">
+                    <div class="col-sm-4">
+                        <h3><i class="fa fa-university"></i>Największe uczelnie w Polsce</h3>
+                        <p>Duis viverra lacus at congue tempor. Nunc ac convallis enim, et commodo sem.</p>
+                    </div>
+                    <div class="col-sm-4">
+                        <h3><i class="glyphicon glyphicon-hand-right"></i>Aplikacja mobilna</h3>
+                        <p>Duis viverra lacus at congue tempor. Nunc ac convallis enim, et commodo sem.</p>
+                    </div>
+                    <div class="col-sm-4">
+                        <h3><i class="fa fa-globe"></i>Portale społecznościowe</h3>
+                        <p>Duis viverra lacus at congue tempor. Nunc ac convallis enim, et commodo sem.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
-<section id="demo">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12 text-center ">
-                <h2>Dlaczego warto korzystać z <span class="blue">Kujon.mobi</span>?</h2>
-            </div>
-            <div class="col-sm-12 demo-col">
-                <div class="col-sm-4">
-                    <h3><i class="fa fa-users"></i>Wymiana wiedzy</h3>
-                    <p>Duis viverra lacus at congue tempor. Nunc ac convallis enim, et commodo sem.</p>
+    <footer id="footer" class="navbar-static-bottom">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6">
+                    <p class="footer-block">Copyright 2016 by <a href="http://kujon.mobi">Kujon.mobi</a>. All rights
+                        reserved.</p>
                 </div>
-                <div class="col-sm-4">
-                    <h3><i class="fa fa-share-alt"></i>Komunikacja</h3>
-                    <p>Duis viverra lacus at congue tempor. Nunc ac convallis enim, et commodo sem.</p>
-                </div>
-                <div class="col-sm-4">
-                    <h3><i class="fa fa-briefcase"></i>Organizacja nauki</h3>
-                    <p>Duis viverra lacus at congue tempor. Nunc ac convallis enim, et commodo sem.</p>
+                <div class="col-sm-6">
+                    <ul class="nav navbar-nav navbar-right navbar-bottom">
+                        <li><a href="regulamin">Regulamin</a></li>
+                        <li><a href="regulamin">Polityka prywatności</a></li>
+                        <li><a href="mailto:kujon@kujon.mobi"><i class="fa fa-envelope"></i> Kontakt</a></li>
+                        <li class="fb"><a href="#"><span class="fa fa-facebook"></span></a></li>
+                        <li class="andr"><a href="#"><span class="fa fa-android"></span></a></li>
+                    </ul>
                 </div>
             </div>
-            <div class="col-sm-12 demo-col">
-                <div class="col-sm-4">
-                    <h3><i class="fa fa-university"></i>Największe uczelnie w Polsce</h3>
-                    <p>Duis viverra lacus at congue tempor. Nunc ac convallis enim, et commodo sem.</p>
+        </div>
+    </footer>
+
+
+    <div class="modal fade logowanie-modal" id="loginModal" tabindex="-1" role="dialog"
+         aria-labelledby="loginModalLabel">
+        <div class="modal-dialog modal-sm" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <div class="col-sm-12">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                                aria-hidden="true">&times;</span></button>
+                        <h3>Logowanie</h3>
+                    </div>
                 </div>
-                <div class="col-sm-4">
-                    <h3><i class="glyphicon glyphicon-hand-right"></i>Aplikacja mobilna</h3>
-                    <p>Duis viverra lacus at congue tempor. Nunc ac convallis enim, et commodo sem.</p>
-                </div>
-                <div class="col-sm-4">
-                    <h3><i class="fa fa-globe"></i>Portale społecznościowe</h3>
-                    <p>Duis viverra lacus at congue tempor. Nunc ac convallis enim, et commodo sem.</p>
+                <div class="modal-body">
+
+                    <div class="col-sm-12">
+
+                        <p>Zaloguj się za pośrednictwem jednego z poniższych portali społecznościowych.</p>
+                    </div>
+                    <div class="col-sm-12">
+                        <a href="{{API_URL}}/authentication/facebook" type="button"
+                           class="btn btn-primary btn-lg btn-block">
+                            Zaloguj się przez Facebook</a>
+                    </div>
+                    <div class="col-sm-12 col-xs-12">
+                        <div class="col-sm-5 col-xs-5 hr-left">
+                            <hr/>
+                        </div>
+                        <div class="col-sm-2 col-xs-2 text-center">
+                            <span>lub</span>
+                        </div>
+                        <div class="col-sm-5 col-xs-5 hr-right">
+                            <hr/>
+                        </div>
+                    </div>
+                    <div class="col-sm-12">
+                        <a href="{{API_URL}}/authentication/google" type="button"
+                           class="btn btn-danger btn-lg btn-block">
+                            Zaloguj się przez Google</a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</section>
+</div>
+
 {% end %}
 
 {% block footer_js %}
@@ -141,6 +209,7 @@
 		 $.cookieBar({
 		 });
 	  });
+
 
 
 </script>
