--- a/web/templates/app.html
+++ b/web/templates/app.html
@@ -4,6 +4,8 @@
 
 <link href="/static/bower_components/bootstrap-table/dist/bootstrap-table.min.css" rel="stylesheet">
 <link href="/static/bower_components/jquery-nice-select/css/nice-select.css" rel="stylesheet">
+<link href="/static/bower_components/fullcalendar/dist/fullcalendar.min.css" rel="stylesheet">
+
 
 <script type="text/javascript" src="/static/require.config.js"></script>
 <script type="text/javascript" data-main="/static/js/startup.js"
