--- a/web/templates/disclaimer.html
+++ b/web/templates/disclaimer.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block header %}
+{% block main %}
 <div class="site-wrapper">
     <div class="site-wrapper-inner">
         <div class="cover-container">
