--- a/web/templates/app.html
+++ b/web/templates/app.html
@@ -121,6 +121,7 @@
 
     <input type="hidden" name="api_url" id="api_url" value="{{API_URL}}">
 
+    <div id="modalWrapper"></div>
 
     <footer id="footer" class="navbar-static-bottom">
         <div class="container">
