design error message

--- a/web/static/templates/error.html
+++ b/web/static/templates/error.html
@@ -1,9 +1,12 @@
-<div class="container">
-    <div class="row">
-        <div class="col-sm-12 naglowek-h2">
-            <div class="alert alert-warning fade in" role="alert">
-                <strong>Upss! </strong>{{message}}
+<section class="welcome">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12 text-center">
+                <h1>Upss! <span>wystąpił niespodziwany błąd</span>!</h1>
+                <p>{{message}}</p>
+                <a href="#/contact" class="btn btn-default btn-welcome">
+                    Skontantuj się z nami jeśli masz dodatkowe pytania.</a>
             </div>
         </div>
     </div>
-</div>
+</section>
