--- a/web/templates/app.html
+++ b/web/templates/app.html
@@ -36,7 +36,7 @@
                 </li>
                 <li class="dropdown">
                     <a href="profil.html" class="dropdown-toggle" data-toggle="dropdown"><img
-                            src="/static/img/profil-head.png"
+                            src="{{current_user['picture']}}"
                             class="img-circle profil-nav">{{current_user['name']}} <span
                             class="glyphicon glyphicon-menu-down"></span></a>
                     <ul class="dropdown-menu">
