has_photo => photo_url

--- a/web/static/templates/error.html
+++ b/web/static/templates/error.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12 text-center">
-                <h1>Upss! <span>wystąpił niespodziwany błąd</span>!</h1>
+                <h1><span>Upss!</span> wystąpił niespodziwany błąd <span>:(</span></h1>
                 <p>{{message}}</p>
                 <a href="#/contact" class="btn btn-default btn-welcome">
                     Skontantuj się z nami jeśli masz dodatkowe pytania.</a>
