--- a/web/static/templates/modal_friend.html
+++ b/web/static/templates/modal_friend.html
@@ -42,7 +42,7 @@
                                 {{/if}}
                             </table>
                         <td>
-                            {{#if has_photo}}
+                            {{#if photo_url}}
                             <div class="img-thumbnail">
                                 <img src="{{has_photo}}">
                             </div>
