--- a/web/static/templates/modal_lecturer.html
+++ b/web/static/templates/modal_lecturer.html
@@ -12,8 +12,8 @@
 					<div class="col-sm-12 col-xs-12">
 						<div class="col-sm-3 col-xs-6 edit">
 							<div class="profil">
-								{{#if has_photo}}
-								<img src="{{has_photo}}" class="img-responsive profil-img">
+								{{#if photo_url}}
+								<img src="{{photo_url}}" class="img-responsive profil-img">
 								{{/if}}
 							</div>
 						</div>
