--- a/web/static/templates/modal_user.html
+++ b/web/static/templates/modal_user.html
@@ -10,8 +10,8 @@
                 <div class="media">
                     <div class="media-left">
                         <a href="#">
-                            {{#if has_photo}}
-                            <img class="media-object" src="{{has_photo}}" alt="...">
+                            {{#if photo_url}}
+                            <img class="media-object" src="{{photo_url}}" alt="...">
                             {{/if}}
                         </a>
                     </div>
