--- a/web/static/templates/user.html
+++ b/web/static/templates/user.html
@@ -4,8 +4,8 @@
             <div class="col-sm-12 content">
                 <div class="col-sm-2 col-xs-6 edit">
                     <div class="profil">
-                        {{#if has_photo}}
-                        <img src="{{has_photo}}" alt="{{first_name}}" class="img-responsive profil-img">
+                        {{#if photo_url}}
+                        <img src="{{photo_url}}" alt="{{first_name}}" class="img-responsive profil-img">
                         {{/if}}
                     </div>
                 </div>
