adapt to style css

--- a/web/static/templates/courses.html
+++ b/web/static/templates/courses.html
@@ -16,7 +16,7 @@
 						</select>
 					</div>
 				</div>
-				<table id="myTable" class="table"
+				<table id="table-przedmioty" class="table"
 					   data-toggle="table"
 					   data-detail-view="true"
 					   data-pagination="true"
