--- a/web/static/templates/lecturers.html
+++ b/web/static/templates/lecturers.html
@@ -6,7 +6,7 @@
                 <div class="naglowek-h2">
                     <h2>Wykładowcy</h2>
                 </div>
-                <table id="myTable" class="table"
+                <table id="table-wykladowcy" class="table"
                        data-toggle="table"
                        data-pagination="true"
                        data-search="true"
