--- a/web/static/templates/terms.html
+++ b/web/static/templates/terms.html
@@ -5,7 +5,7 @@
                 <div class="naglowek-h2">
                     <h2>Cykle akademickie</h2>
                 </div>
-                <table id="myTable" class="table"
+                <table id="table-cykle" class="table"
                        data-toggle="table"
                        data-pagination="true"
                        data-search="true"
