--- a/web/static/templates/friends.html
+++ b/web/static/templates/friends.html
@@ -7,7 +7,7 @@
     </div>
     <div class="panel-body">
         <div class="col-xs-6">
-        <table id="suggested-table" class="table table-hover table-responsive">
+            <table id="table-znajomi" class="table table-hover table-responsive">
             <thead>
             <th>Osoba</th>
             <th>Zajęcia</th>
