--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -13,6 +13,9 @@
 
     <!-- Bootstrap -->
     <link href="/static/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/bower_components/bootstrap-table/dist/bootstrap-table.min.css" rel="stylesheet">
+    <link href="/static/bower_components/jquery-nice-select/css/nice-select.css" rel="stylesheet">
+
     <link href="/static/css/style.css" rel="stylesheet">
     <link href="/static/bower_components/jquery.cookiebar/dist/jquery.cookiebar.min.css" rel="stylesheet">
 
