--- a/web/static/templates/faculties.html
+++ b/web/static/templates/faculties.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-sm-12 content table-responsive prof">
                 <div class="naglowek-h2">
-                    <h2>Fakultety</h2>
+                    <h2>Jednostki</h2>
                 </div>
                 <table id="myTable" class="table"
                        data-toggle="table"
