--- a/web/static/templates/courses.html
+++ b/web/static/templates/courses.html
@@ -1,19 +1,11 @@
 <section id="przedmioty">
     <div class="container">
         <div class="row">
-            <div class="col-sm-12 content table-responsive prof">
-                <div class="naglowek-h2">
+            <div class="col-sm-12 content table-responsive">
+                <div class="heading">
                     <h2>Przedmioty</h2>
                 </div>
-
-                <table id="table-przedmioty" class="table"
-                       data-toggle="table"
-                       data-detail-view="true"
-                       data-pagination="true"
-                       data-search="true"
-                       data-search-align="left"
-                       data-sort-name="name"
-                       data-detail-formatter="detailFormatter">
+                <table id="courses-table" class="table display" cellspacing="0" width="100%">
                     <thead>
                     <tr>
                         <th data-sortable="true">Nazwa przedmiotu</th>
