--- a/web/static/templates/grades.html
+++ b/web/static/templates/grades.html
@@ -1,14 +1,11 @@
 <section id="oceny">
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-12 content table-responsive oceny">
-				<div class="naglowek-h2">
+			<div class="col-sm-12 content table-responsive grades">
+				<div class="heading">
 					<h2>Oceny</h2>
 				</div>
-				<table id="myTable" class="table"
-					   data-toggle="table"
-					   data-pagination="true"
-					   data-sort-name="name">
+				<table id="table-grades" class="table" cellspacing="0" width="100%">
 					<thead>
 					<tr>
 						<th data-sortable="true">Semestr</th>
