--- a/web/static/templates/programmes.html
+++ b/web/static/templates/programmes.html
@@ -2,14 +2,10 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12 content table-responsive prof">
-                <div class="naglowek-h2">
+                <div class="heading">
                     <h2>Kierunki</h2>
                 </div>
-                <table id="myTable" class="table"
-                       data-toggle="table"
-                       data-pagination="true"
-                       data-search="true"
-                       data-sort-name="name">
+                <table id="table-programmes" class="table" cellspacing="0" width="100%">
                     <thead>
                     <tr>
                         <th data-sortable="true">Opis</th>
