--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -17,13 +17,13 @@
         <div id="slidemenu">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <button class="btn btn-group log logowanie" href="#" data-toggle="modal" data-target="#loginModal">
+                    <button class="btn btn-group log logowanie" href="#" data-toggle="modal" data-target="#myModal">
                         Zaloguj się
                     </button>
                 </li>
 
                 <li>
-                    <button class="btn btn-group log logowanie" href="#" data-toggle="modal" data-target="#loginModal">
+                    <button class="btn btn-group log logowanie" href="#" data-toggle="modal" data-target="#myModal">
                         Zaloguj się
                     </button>
                 </li>
@@ -41,19 +41,11 @@
                 <div class="col-sm-10 text-center col-sm-offset-1">
                     <div class="intro-header">
                         <h1>Komunikacja studentów z profesorami <span>staje się przyjemnością</span></h1>
-                        <button class="btn btn-group white logowanie" data-toggle="modal" data-target="#loginModal">
+                        <button class="btn btn-group white logowanie" data-toggle="modal" data-target="#myModal">
                             Zaloguj
                             się
                         </button>
                     </div>
-                    <!--<div class="intro-body">
-                        <div class="text-center caption">
-
-                        </div>
-                        <div class="text-center caption-img">
-
-                        </div>
-                    </div>-->
                     <div class="img-header">
                         <img src="/static/img/apple_devices.png" class="img-responsive"/>
                     </div>
@@ -79,7 +71,7 @@
                         </div>
                     </div>
                     <div class="col-xs-12 text-center log-overview">
-                        <p>lub <a href="#" class="blue " data-toggle="modal" data-target="#loginModal">Zaloguj się</a>
+                        <p>lub <a href="#" class="blue " data-toggle="modal" data-target="#myModal">Zaloguj się</a>
                             do
                             wersji desktopowej</p>
                     </div>
@@ -146,8 +138,7 @@
     </footer>
 
 
-    <div class="modal fade logowanie-modal" id="loginModal" tabindex="-1" role="dialog"
-         aria-labelledby="loginModalLabel">
+    <div class="modal fade logowanie-modal" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
         <div class="modal-dialog modal-sm" role="document">
             <div class="modal-content">
                 <div class="modal-header">
