--- a/web/static/templates/contact.html
+++ b/web/static/templates/contact.html
@@ -1,7 +1,7 @@
 <section id="kontakt">
     <div class="container">
         <div class="row">
-            <div class="col-sm-12 naglowek-h2">
+            <div class="col-sm-12 heading">
                 <h2 class="skorzystaj-z-pomocy">Skorzystaj z kontaku</h2>
                 <p>Masz jakieś pytania lub problemy z korzystaniem z aplikacji? <span>
 				Napisz do nas!</span></p>
