--- a/web/static/templates/faculties.html
+++ b/web/static/templates/faculties.html
@@ -1,15 +1,11 @@
 <section id="cykle">
     <div class="container">
         <div class="row">
-            <div class="col-sm-12 content table-responsive prof">
-                <div class="naglowek-h2">
+            <div class="col-sm-12 content table-responsive">
+                <div class="heading">
                     <h2>Jednostki</h2>
                 </div>
-                <table id="myTable" class="table"
-                       data-toggle="table"
-                       data-pagination="true"
-                       data-search="true"
-                       data-sort-name="name">
+                <table id="table-faculties" class="table" cellspacing="0" width="100%">
                     <thead>
                     <tr>
                         <th data-sortable="true">Nazwa</th>
