--- a/web/static/templates/lecturers.html
+++ b/web/static/templates/lecturers.html
@@ -1,16 +1,11 @@
 <section id="wykladowcy">
     <div class="container">
         <div class="row">
-
             <div class="col-sm-12 content table-responsive prof">
-                <div class="naglowek-h2">
+                <div class="heading">
                     <h2>Wykładowcy</h2>
                 </div>
-                <table id="table-wykladowcy" class="table"
-                       data-toggle="table"
-                       data-pagination="true"
-                       data-search="true"
-                       data-sort-name="name">
+                <table id="table-lecturers" class="table" cellspacing="0" width="100%">
                     <thead>
                     <tr>
                         <th data-sortable="true">Nazwisko</th>
