--- a/web/templates/app.html
+++ b/web/templates/app.html
@@ -3,6 +3,7 @@
 {% block header_js %}
 
 <link href="/static/bower_components/fullcalendar/dist/fullcalendar.min.css" rel="stylesheet">
+<link href="/static/bower_components/datatables/media/css/dataTables.bootstrap.css" rel="stylesheet">
 
 
 <script type="text/javascript" src="/static/require.config.js"></script>
