--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -13,11 +13,10 @@
 
     <!-- Bootstrap -->
     <link href="/static/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/static/bower_components/bootstrap-table/dist/bootstrap-table.min.css" rel="stylesheet">
-    <link href="/static/bower_components/jquery-nice-select/css/nice-select.css" rel="stylesheet">
+    <link href="/static/bower_components/datatables/media/css/jquery.dataTables.min.css" rel="stylesheet">
 
+    <!--    -->
     <link href="/static/css/style.css" rel="stylesheet">
-    <link href="/static/bower_components/jquery.cookiebar/dist/jquery.cookiebar.min.css" rel="stylesheet">
 
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,100italic,300italic,400italic,500,500italic,700,700italic,900,900italic'
           rel='stylesheet' type='text/css'>
