--- a/web/static/templates/lecturers.html
+++ b/web/static/templates/lecturers.html
@@ -1,4 +1,4 @@
-<section id="wykladowcy">
+<section id="lecturers">
     <div class="container">
         <div class="row">
             <div class="col-sm-12 content table-responsive prof">
