--- a/web/static/templates/courses.html
+++ b/web/static/templates/courses.html
@@ -1,4 +1,4 @@
-<section id="przedmioty">
+<section id="courses">
     <div class="container">
         <div class="row">
             <div class="col-sm-12 content table-responsive">
