--- a/web/static/templates/faculties.html
+++ b/web/static/templates/faculties.html
@@ -1,4 +1,4 @@
-<section id="cykle">
+<section id="faculties">
     <div class="container">
         <div class="row">
             <div class="col-sm-12 content table-responsive">
