--- a/web/static/templates/programmes.html
+++ b/web/static/templates/programmes.html
@@ -1,4 +1,4 @@
-<section id="cykle">
+<section id="programmes">
     <div class="container">
         <div class="row">
             <div class="col-sm-12 content table-responsive prof">
