--- a/web/static/templates/modal_lecturer.html
+++ b/web/static/templates/modal_lecturer.html
@@ -7,7 +7,7 @@
 						aria-hidden="true">&times;</span></button>
 				<p class="modal-title" id="myModalLabel">Wykładowca {{first_name}} {{last_name}}</p>
 			</div>
-			<div class="modal-body wykladowcy-modal">
+			<div class="modal-body lecturers-modal">
 				<div class="row">
 					<div class="col-sm-12 col-xs-12">
 						<div class="col-sm-3 col-xs-6 edit">
