--- a/web/static/templates/grades.html
+++ b/web/static/templates/grades.html
@@ -20,8 +20,9 @@
 					{{#data}}
 					<tr>
 						<td>{{term_id}}</td>
-						<td><a class="btn btn-link course-btn" type="button" data-courseId="{{course_id}}"
-							   data-termId="{{term_id}}">{{course_name}}</a></td>
+						<td class="courses-modal" data-toggle="modal" data-target="#list-student"
+							data-courseId="{{course_id}}" data-termId="{{term_id}}">{{course_name}}
+						</td>
 						<td>{{exam_session_number}}</td>
 						<td>{{class_type}}</td>
 						<td>{{value_symbol}}</td>
