--- a/web/static/templates/modal_course.html
+++ b/web/static/templates/modal_course.html
@@ -1,4 +1,4 @@
-<div class="modal fade" id="courseModal{{courseId}}" tabindex="-1" id="lista-studentow" role="dialog"
+<div class="modal fade" id="courseModal{{courseId}}" tabindex="-1" id="list-student" role="dialog"
 	 aria-labelledby="gridSystemModalLabel">
 	<div class="modal-dialog modal-lg" role="document">
 		<div class="modal-content">
