--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -169,23 +169,23 @@ tbody>tr:hover{background:#f7f7f7;}
 .footer-index{position:fixed !important;bottom:0;background:white;}
 
 /*przedmioty*/
-.opis-courses{cursor:pointer;}
+.courses-description{cursor:pointer;}
 .detail-icon>i{top:0;left:0;right:0;margin-left:0;margin-right:0;margin-top:0;font-size: 13px;color: black;}
 .pull-right{padding-right:0px;}
 .select-year{margin-top:5px;float: right;padding: 0;}
 .select-year>.col-sm-4>.nice-select{width:100%;height: 30px;line-height: 30px;min-width: 120px;}
 .select-year>.col-sm-4>.nice-select>ul>.option{height: 30px;line-height: 30px;min-height:30px}
 .select-year label{margin: 12px 20px;}
-.lista-studentow{cursor:pointer;}
+.list-student{cursor:pointer;}
 
-#kryteria-grades>.modal-dialog>.modal-content>.modal-body{padding:30px;}
-.kryteria-grades{cursor:pointer;}
+#criteria-grades>.modal-dialog>.modal-content>.modal-body{padding:30px;}
+.criteria-grades{cursor:pointer;}
 
 /*bibliografia*/
 #bibliografia>.modal-dialog>.modal-content>.modal-body {padding: 30px;}
 
 /*Opis przedmiotu*/
-#opis-courses>.modal-dialog>.modal-content>.modal-body{padding:30px;}
+#courses-modal>.modal-dialog>.modal-content>.modal-body{padding:30px;}
 @import url('//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css');
 .table>thead>tr>th {vertical-align: bottom;border-bottom: none;}
 .table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th {padding: 8px;line-height: 1.42857143;vertical-align: top;}
@@ -200,7 +200,7 @@ tbody>tr:hover{background:#f7f7f7;}
 .panel-head-courses{border: 1px solid #ddd;border-top-left-radius: 4px;border-top-right-radius: 4px;border-collapse: separate;}
 .panel-body>.col-sm-12{padding:15px;}
 .title-courses{color:#888;font-size:14px;margin-bottom:5px;}
-.opis-courses>span{color:#000;font-size:14px;}
+.courses-description>span{color:#000;font-size:14px;}
 .panel-collapse{border-top:1px solid #ddd;}
 .panel-collapse:last-child{border-bottom:1px solid #ddd;border-bottom-right-radius: 4px;border-bottom-left-radius: 4px;}
 .collapsed>table>tbody>tr>td>span{font-family: 'Glyphicons Halflings';content: "\e114";color: grey;-webkit-transform: rotate(-180deg);-moz-transform:rotate(-180deg);-ms-transform:rotate(-180deg);	-o-transform:rotate(-180deg);transform:rotate(-180deg);}
@@ -228,6 +228,7 @@ tbody>tr:hover{background:#f7f7f7;}
 .zobacz-lecturers{color:#888;cursor:pointer;}
 .zobacz-lecturers:hover{text-decoration: underline;}
 .modal-content {position: relative;background-color: #fff;-webkit-background-clip: padding-box;background-clip: padding-box;border: none;border-radius: 4px;outline: 0;-webkit-box-shadow: none;box-shadow: none;}
+.lecturer-btn{padding:0;color:black;font-size:13px;}
 
 /*kontakt*/
 ::-webkit-file-upload-text, ::-moz-file-upload-text, ::file-upload-text{margin:0 10px;}
@@ -246,8 +247,8 @@ textarea.form-control {height: auto;padding-top:12px;}
 
 /*Oceny*/
 
-#lista-studentow>.modal-dialog>.modal-content>.modal-body>.row>.col-sm-12{padding:50px 30px;}
-#lista-studentow>.modal-dialog>.modal-content>.modal-body>.row>.courses-modal{padding-bottom:30px;}
+#modal-list-student>.modal-dialog>.modal-content>.modal-body>.row>.col-sm-12{padding:50px 30px;}
+#modal-list-student>.modal-dialog>.modal-content>.modal-body>.row>.courses-modal{padding-bottom:30px;}
 .table-bordered {border: 1px solid #ddd;border-radius: 4px;border-collapse: inherit;}
 .courses-modal{margin-bottom:20px;}
 .grades>table>thead>tr>th{border-left: 1px solid #ddd;border-bottom:0px solid #ddd !important;color:#aaa;font-weight:400;padding:4px 8px !important;}
@@ -277,7 +278,7 @@ label {display: inline-block;max-width: 100%;margin-bottom: 5px;font-weight: 500
 .navbar-collapse {padding-right: 15px;padding-left: 15px;overflow-x: visible;-webkit-overflow-scrolling: touch;border-top:  none;-webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,.1);box-shadow: inset 0 1px 0 rgba(255,255,255,.1);}
 
 .no-margin-top {margin-top: 0px!important}
-#page-content {right: 0;height: 100%;}
+#page-content {right: 0;/*height: 100%;*/}
 #page-content.slide-active {padding-top: 0;}
 #slide-nav .navbar-toggle {cursor: pointer;position: relative;line-height: 0;margin: 0;width: 30px;height: 40px;padding: 13px 0 0 0;border: 0;background: transparent;}
 #slide-nav .navbar-toggle > .icon-bar {width: 100%;display: block;height: 3px;margin: 5px 0 0 0;}
@@ -414,7 +415,7 @@ header>.container>.row>.col-sm-10 {margin-top: 70px;max-height: 685px;}
 .logowanie-modal>.modal-dialog>.modal-content>.modal-body>.col-sm-12>.col-sm-2>span {font-size: 14px;}
 .hr-left {padding-left: 0;}
 .hr-right {padding-right: 0;}
-	
+
 /*media*/
 @media (min-width: 769px){
 header{background: url('../img/header.png') no-repeat;width:100%;background-size: cover;background-position-x: center;background-position-y: center;}
@@ -435,7 +436,7 @@ header>.container>.row>.col-sm-10 {max-height: 414px;}
 .navbar-form {padding: 0px;}
 }
 
-@media (max-width:767px) { 
+@media (max-width:767px) {
 header{background: url('../img/header-mobile.jpg') no-repeat;width:100%;background-size: cover;background-position-x: center;background-position-y: center;}
 #wybor-uczelni>.container>.row>.col-sm-12>.form-group>input {padding: 2% 0 0 40px;    background: url(../img/search.png) no-repeat 3% 57%;}
 .navbar-landing.slide-active{position:fixed;}
@@ -501,18 +502,18 @@ body.slide-active {overflow-x: hidden;padding:0;}
 .navbar-nav>li>a {padding-top: 19px;padding-bottom: 20px;}
 #znajomi>.container>.row>.table-responsive>.bootstrap-table>.fixed-table-container>.fixed-table-body>table>tbody>.col-sm-6{padding:0;margin-top:30px;}
 }
-	
+
 
 .first-nav-pagination>a{border-top-left-radius: 4px;border-bottom-left-radius: 4px;}
 .last-nav-pagination>a{border-top-right-radius: 4px;border-bottom-right-radius: 4px;}
 tr.detail-view>td{padding:15px !important;}
 tr.detail-view>td>.col-sm-12{padding:15px;}
 
-	
-	
+
+
 /*errror*/
 .error{margin-top: 50px;min-height:auto;}
-	
+
 @media (min-width: 930px) {
 .navbar {
     border-radius: 4px;
@@ -821,7 +822,7 @@ table>tbody>tr>td:last-child, table>tbody>tr>th:last-child, table>tfoot>tr>td:la
 }
 .dataTables_paginate>.paginate_button.previous{border-radius:4px;margin-right:15px;}
 .dataTables_paginate>.paginate_button.next{border-radius:4px;margin-left:15px;}
- 
+
 .dataTables_wrapper>div>div>table>thead>tr>th, table>thead>tr>th {
 	  cursor: pointer;
     background-position: 98%;
@@ -930,12 +931,12 @@ border-radius: 4px;}
     border-left:0;
 }
 td.details-control:before {
-	 font-family: 'Glyphicons Halflings'; 
+	 font-family: 'Glyphicons Halflings';
 	content:"\e259";
     cursor: pointer;
 }
 tr.shown td.details-control:before {
-	 font-family: 'Glyphicons Halflings'; 
+	 font-family: 'Glyphicons Halflings';
 	content:"\e260";
 }
 table.dataTable tbody td.no-padding {
@@ -945,7 +946,7 @@ table.dataTable tbody td.no-padding {
 .slider tr>td{border:none;}
 .slider tr{border:none;}
 table.dataTable.row-border tbody th, table.dataTable.row-border tbody td, table.dataTable.display tbody th, table.dataTable.display tbody td {
-     border-top: 1px solid #ddd; 
+     border-top: 1px solid #ddd;
 }
 .slider{    padding: 5px 30px;}
 .slider>table>tbody>tr>td{border:none;border-top:none !important;text-align:left;}
