--- a/web/static/templates/lecturers.html
+++ b/web/static/templates/lecturers.html
@@ -15,7 +15,7 @@
                     <tbody>
                     {{#data}}
                     <tr>
-                        <td><a class="btn btn-link lecturer-btn" type="button" data-lecturerId="{{user_id}}">{{last_name}}</a>
+                        <td><span class="btn btn-link lecturer-btn" type="button" data-lecturerId="{{user_id}}">{{last_name}}</span>
                         </td>
                         <td>{{first_name}}</td>
                     </tr>
